Add racoon invocation.
We use BetterAuthSample from Apple to write the helper that will
start/stop racoon.

The helper is updated if needed (some kind of checksum is computed).
The helper handles start and stop. Stopping racoon means stopping an
IKE daemon listening on UDP port 500. Starting racoon mean start
racoon daemon, wait for its PID file and try to connect to its socket.

Still not done :
 - racoonctl handling
 - phase 1 helper
 - bundle scripts
 - localization

--- a/racoon.conf
+++ b/racoon.conf
@@ -16,6 +16,7 @@
 
 path certificate "%%RESOURCEPATH%%";
 path script "%%RESOURCEPATH%%";
+path pidfile "%%WORKPATH%%/racoon.pid";
 
 listen {
 ## Please use %%WORKPATH%%/racoon.sock and ensure that the current
